--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "babel-plugin-macros": "^3.1.0",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^10.16.0",
